samples/_failures_safe/1761538509_34a62d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6790cbd4.c: In function ‘main’:
./samples/SAFE/__tmp_6790cbd4.c:142:5: error: expected expression at end of input
  142 |     while (1)
      |     ^~~~~
./samples/SAFE/__tmp_6790cbd4.c:142:5: error: expected declaration or statement at end of input
